@@ -82,3 +82,11 @@ config SYSLOG_CONSOLE
 		output (syslog_putc). This is useful, for example, if the only console is a Telnet
 		console.  Then in that case, console output from non-Telnet threads will go to
 		the syslog output.
+
+config DRIVER_NOTE
+	bool "Scheduler instrumentation driver"
+	default n
+	depends on SCHED_INSTRUMENTATION_BUFFER
+	---help---
+		Enable building a serial driver that can be used by an application to read data
+		from the in-memory, scheduler instrumentatin "note" buffer.
